--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ body {
     white-space: nowrap;
     vertical-align: baseline;
     border-radius: .25em;
+    margin: .3em;
 }
 
 .label-primary {
